<resources>
    <string name="app_name">Du Lịch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_search">Search</string>
    <string name="email">Email </string>
    <string name="passowrd">Password</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="show_pwd">Hiện Password</string>
    <string name="hide_pwd">Ẩn Password</string>
    <string name="forgot">Quên password?</string>
    <string name="closebutton">Đóng </string>
    <string name="newUser">Chưa phải là thành viên? Đăng ký.</string>
    <string name="fullName">Tên</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">Đồng ý với các Điều Khoản và Quy định của MyTrip.</string>
    <string name="signUp">ĐĂNG KÝ</string>
    <string name="already_user">Đã có tài khoản? Đăng nhập.</string>
    <string name="registered_emailid">Điền Email đã đăng ký vào phía dưới.</string>
    <string name="submit">GỬI</string>
    <string name="back">TRỞ LẠI</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="FACEBOOK_APP_ID">178781489591357</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
    <string name="facebook_app_id">178781489591357</string>
    <string name="fb_login_protocol_scheme">fb178781489591357</string>
    <string name="login_email_label">Login with Email</string>
    <string name="login_phone_label">Login with Phone Number</string>
    <string name="account">Account</string>
    <string name="id_label">Account ID</string>
    <string name="phone_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="logout_label">Log Out</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_my_places"> My Places</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="userInfo">THÔNG TIN CÁ NHÂN</string>
    <string name="logout">ĐĂNG XUẤT</string>
    <string name="changePassword">ĐỔI MẬT KHẨU</string>
    <string name="fillYourNewPassword">Điền mật khẩu mới của bạn</string>
    <string name="newPassword">New Password</string>
    <string name="placeholder">Placeholder</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">Æ’/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="danang">Danang</string>
    <string name="details_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="destination_name">Central of Vietnam</string>
    <string name="content_description">Destination Poster</string>
    <string name="title_activity_north">Miền Bắc</string>
    <string name="description_coto1">
        Trạm Hải đăng Cô Tô là 1 trong số hơn 30 “con mắt biển đêm” đang hoạt động trên khắp vùng lãnh hải Việt Nam, ngọn hải đăng này được xây dựng từ cuối thế kỷ 19. Để leo lên được ngọn hải đăng, du khách phải vượt qua những khúc cua dốc đứng, sau đó leo tiếp lên 72 bậc cầu thang từ dưới chân lên đến đỉnh ngọn hải đăng. Từ đây bạn có thể thoải mái thu vào tầm mắt toàn cảnh đảo Cô Tô, từ thị trấn biển đẹp như mơ, xen lẫn những rừng cây xanh mướt, êm đềm những mái nhà khiêm nhường và giản dị.

    </string>
    <string name="khampha_diadiemhotmiennam_gioithieu">Miền Tây Nam Bộ thu hút đông đảo du khách ghé thăm với những đồng ruộng mênh mông mông, những cánh đồng bát ngát, và các con sông, kênh rạch chằng chịt mang đến cảm giác tươi mát, thú vị. Hãy đến với 10 địa điểm du lịch nổi tiếng của Tây Nam Bộ ngay sau đây nhé!</string>
    <string name="khampha_diadiemhotmiennam_chonoicairang">Cái Răng (Cần Thơ) là một trong những chợ trên sông nổi tiếng ở khu vực Tây Nam Bộ. Chợ chuyên mua bán các loại trái cây cùng những nông sản của vùng. Mỗi sớm, có tới hàng trăm chiếc thuyền lớn bé đậu sát nhau trên sông. Bán sản vật gì người ta sẽ treo sản vật đó lên cây sào ở trên mũi thuyền nên không cần phải rao hàng như các chợ trên đất liền. Chợ nổi Cái Răng đã trở thành điểm du lịch hấp dẫn nhất của Tây Nam Bộ mà du khách không thể bỏ qua trong hành trình của mình.</string>
    <string name="khampha_diadiemhotmiennam_conphung">Khu du lịch Cồn Phụng là một cù lao nổi thuộc đja phận xã Tân Thạnh, huyện Châu Thành, tỉnh Bến Tre. Tới đây, du khách sẽ có cơ hội tham gia vào cuộc sống của miền sông nước Nam bộ như chèo xuồng trong những kênh rạch, đi xe ngựa tham quan các vườn cây ăn trái hoặc các làng nghề truyền thống, được thưởng thức loại trà pha mật ong có mùi hương nhãn, hay thưởng thức giọng hát đờn ca tài tử… Bên cạnh đó, du khách cũng có thể tham gia vào nhiều trò chơi thú vị.</string>
    <string name="khampha_diadiemhotmiennam_mykhanh">Khi có dịp đến với Cần Thơ, du khách không nên bỏ qua khu du lịch Mỹ Khánh – một trong những khu du lịch sinh thái hấp dẫn. Đến đây, du khách sẽ được tham quan những ngôi nhà nông thôn, đi dạo trong những tán cây, tận hưởng làn gió mát dịu và thưởng thức hàng trăm loại trái cây ngay tại chỗ hay tham gia nhiều trò chơi giải trí.</string>
    <string name="khampha_diadiemhotmiennam_traicaytanquy">Cù lao Tân Quy (Trà Vinh ) từ lâu đã được mệnh danh là xứ sở của cây trái, bởi nơi đây có điều kiện tự nhiên được thiên nhiên ưu đãi, rất thích hợp cho sự phát triển nhiều loại cây ăn trái. Có diện tích khoảng 500 ha, du khách khi đến Tân Quy sẽ choáng ngợp với hàng trăm loại cây trái nối tiếp nhau, kéo dài vô tận như chôm chôm, dâu, măng cụt, sầu riêng…</string>
    <string name="khampha_diadiemhotmiennam_traicaytambinh">Có diện tích trên 7.600 ha, vườn cây trái Tam Bình (Vĩnh Long) nổi tiếng với các loại cây ăn trái như cam sành, xoài, sầu riêng, măng cụt, và thanh long, dâu… Trong đó nổi tiếng nhất là cam sành có vị ngọt thanh, hương thơm nồng. Tới Tam Bình, du khách còn được tham quan di tích Cái Ngang, chùa Kỳ Sơn, chùa Phước Sơn… cùng các làng nghề truyền thống.</string>
    <string name="diadiemanuong_tphcm_bunrieubanhthanh1">Hiếm có thành phố nào mà đông tây kết hợp, cổ kim giao thoa hài hòa như Sài Gòn. Bạn có thể bắt gặp những nhãn hiệu đồ ăn nhanh hay take away mới nhất trên thế giới, nhưng cũng có thể vô tình lạc vào một quán bình dân với tuổi đời gần nửa thế kỉ. Bún riêu Bến Thành – số 4 Phan Bội Châu – là một trong số đó. Không chỉ nổi tiếng về độ lâu đời, bún riêu Bến Thành còn được biết đến với công thức ngon, độc khiến người nổi tiếng cũng phải ghé ăn:</string>
    <string name="diadiemanuong_tphcm_bunrieubanhthanh3">Đi kèm món chả cua là nước sốt gồm mắm me, muối chanh và mắm tôm. Chúng tôi đã được chủ quán dạy cho cách ăn đúng điệu: Hòa phần nước sốt này với nhau, chấm chả với nước sốt rồi ăn cùng bún. Người thích đậm đà thì có thể chan thêm vào tô bún. Sốt chua nhẹ giúp cân bằng rất tốt vị ngọt, béo của chả cua.</string>
    <string name="diadiemanuong_tphcm_bunrieubanhthanh2">Thế nhưng, tạm bỏ qua tiếng tăm có trước, lần ăn thử bún riêu Bến Thành này tập trung vào hương vị của món ăn – và có thể nói không phải tự dưng mà quán nổi tiếng: Bún riêu ở đây có công thức rất lạ miệng. Đặc sản của quán là chả cua. Thay vì riêu cua như chỗ khác thì cua ở đây được làm thành miếng chả rất to và chắc, ngoài thịt cua còn có tôm tươi và nhiều nguyên liệu đặc biệt khác. Khi trò chuyện, dù ra sức năn nỉ nhưng chủ quán vẫn từ chối tiết lộ bí kíp gia truyền quý giá này. Chả mềm, ngọt thịt, nạc khá nhiều nên béo nhẹ chứ không ngậy, không hề tanh, người sợ mùi tanh vẫn có thể ăn được.:</string>
    <string name="beachnorth">Mùa hè đang gõ cửa, để xua tan ngay cái nóng nực đầu hè của miền Bắc, không gì tuyệt hơn là được đắm mình trong làn nước biển trong xanh, quyến rũ của một trong những bãi biển hấp dẫn nhất nơi đây.</string>
    <string name="beachnorth1">Bãi biển Sầm Sơn thuộc thị xã Sầm Sơn, tỉnh Thanh Hóa là một trong những bãi tắm đẹp, được người Pháp biết đến và khai thác từ năm 1906. Từ những thập kỷ trước, đã có nhiều biệt thự nghỉ mát mọc lên ở đây. Vua Bảo Ðại, ông vua cuối cùng của triều Nguyễn cũng xây biệt thự riêng ở Sầm Sơn. Bên cạnh bãi biển đẹp, Sầm Sơn có nhiều thắng cảnh nổi tiếng như: Hòn Trống Mái, đền Ðộc Cước, chùa Cô Tiên...</string>
    <string name="buivien1">Đến Sài Gòn, câu cửa miệng của hầu hết khách du lịch là "Nhất định phải ghé phố Tây Bùi Viện". Muốn biết một Sài Gòn "suốt đêm không ngủ" nhộn nhịp ra sao, sầm uất như thế nào thì có lẽ chẳng đâu bằng Bùi Viện.</string>
    <string name="buivien2">Phố Bùi Viện hay còn được gọi là phố Tây, bởi số lượng khách du lịch đến chủ yếu từ các nước phương Tây như Mỹ, Anh, Pháp.Kể từ năm 2009, đối tượng đến Phố Tây đã được mở rộng, không chỉ là người phương Tây mà còn là các du khách châu Á và khách trong nước.</string>
    <string name="buivien3">Có thể nói, đây được xem là một trong những tụ điểm xem - chơi rất "được lòng" giới trẻ ở Sài Gòn, đặc biệt là với du khách nước ngoài.</string>
    <string name="rs_trogiup_1">ỨNG DỤNG MY TRIP
"\n\t"* Được phát triển bởi:
     "\n\t\t\t"     Huỳnh Tiến Sĩ
     "\n\t\t\t"     Lê Quang Thảo
     "\n\t\t\t"     Lê Quốc Huy
     "\n\t\t\t"     Trần Khánh Vy
     "\n\t\t\t"     Nguyễn Hữu Trí
     "\n\t\t\t"     Nguyễn Thanh Sang
     "\n\t\t\t"     Nguyễn Ngọc Hùng
 "\n\t"* Với khả năng cung cấp cho người dùng những thông tin từ lịch trình, danh lam thắng cảnh, món ăn ngon cho tới một số điều hữu ích về địa điểm nơi bạn tới. Ứng dụng này hỗ trợ cả các thành phố tại Việt Nam, từ Hà Nội, TP. Hồ Chí Minh, Hạ Long (Quảng Ninh) cho đến một số vùng du lịch nhỏ hơn như Hà Giang hay khu vực Miền Tây Nam Bộ. Ngoài ra còn cho người dùng tự tạo note lịch trình du lịch của bản thân.</string>
    <string name="trogiup_2">Hướng dẫn sử dụng ứng dụng</string>
    <string name="rs_trogiup_2">Để sử dụng được toàn bộ những tính năng của ứng dụng, bạn phải có tài khoản.
 "\n\t\t" - Nếu đã có tài khoản, bạn chỉ cần đăng nhập. Có 3 cách:
     "\n\t\t\t" * Nhập gmail và password bạn đã đăng kí
     "\n\t\t\t" * Đăng nhập bằng Facebook.
     "\n\t\t\t" * Đăng nhập bằng Google.
 "\n\t\t" - Nếu chưa có tài khoản, bạn cần phải đăng ký và sau đó đăng nhập vào ứng dụng</string>
    <string name="trogiup_3">Hỗ trợ</string>
    <string name="rs_trogiup_3">Mọi chi tiết liên hệ: Huỳnh Sĩ (si@gmail.com)</string>
</resources>