<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/nambo_khampha"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/khampha_diadiemhotmiennam_gioithieu"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. Chợ nổi Cái Răng - Cần Thơ"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khampha_diadiemhotmiennam_chonoicairang"/>
                
                <ImageView
                    android:scaleType="fitXY"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/khampha_diadiemhotmiennam_chonoicairang"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. Khu du lịch Cồn Phụng - Bến Tre"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khampha_diadiemhotmiennam_conphung"/>

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/khampha_diadiemhotmiennam_conphung"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. Khu du lịch Mỹ Khánh - Cần Thơ"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khampha_diadiemhotmiennam_mykhanh"/>

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/khampha_diadiemhotmiennam_mykhanh"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. Vườn cây trái Tân Quy"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khampha_diadiemhotmiennam_traicaytanquy"/>

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/khampha_diadiemhotmiennam_traicaytanquy"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5. Vườn cây trái Tam Bình"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khampha_diadiemhotmiennam_traicaytambinh"/>

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/khampha_diadiemhotmiennam_traicaytambinh"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
