<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>



    <LinearLayout

        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/cafevt1" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diadiemanuong_tphcm_bunrieubanhthanh1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/cafevt2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diadiemanuong_tphcm_bunrieubanhthanh2"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/cafevt1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diadiemanuong_tphcm_bunrieubanhthanh3"/>

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cafevt3"/>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>






</android.support.v4.widget.DrawerLayout>
