<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/help_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">
                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trogiup_1"
                    android:textSize="18sp"
                    android:textColor="#333" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_next_black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rsHelp_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#d1f7e1"
                android:visibility="gone">
                <TextView
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#3c00fa"
                    android:text="@string/rs_trogiup_1" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">
                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trogiup_2"
                    android:textSize="18sp"
                    android:textColor="#333" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_next_black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rsHelp_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#d1f7e1"
                android:visibility="gone">
                <TextView
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#3c00fa"
                    android:text="@string/rs_trogiup_2" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">
                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trogiup_3"
                    android:textSize="18sp"
                    android:textColor="#333" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_next_black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rsHelp_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#d1f7e1"
                android:visibility="gone">
                <TextView
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#3c00fa"
                    android:text="@string/rs_trogiup_3" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>
        <Button
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Home"
            android:textColor="@color/ak_buttonBackground">
        </Button>
    </LinearLayout>
</ScrollView>