<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/tphcm"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:text="Phố đi bộ Bùi Viện"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/buivien1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/buivien"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buivien2"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/buivien1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buivien3"/>
<!--
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/buivien2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buivien4"/>-->

<!--                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/buivien3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buivien5"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/buivien4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buivien6"/>-->

<!--                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/buivien5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buivien7"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/buivien6"/>-->


            </LinearLayout>


        </ScrollView>

    </LinearLayout>



</android.support.v4.widget.DrawerLayout>
